--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 .App {
   text-align: center;
-  padding: 50px;
+  padding: 26px;
+  padding-top: 50px;
+  max-width: 700px;
+  margin: auto;
 }
 
 a {
-  color: #ff007f;
+  color: #275dad;
 }
